--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,1 +1,8 @@
 <a href="{% url 'home' %}">Flies</a>
+
+<form method="GET" action="{% url 'home' %}">
+    <input type="text" name="q" placeholder="Search Rooms" />
+
+</form>
+
+<hr>
