--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,8 +1,16 @@
 <a href="{% url 'home' %}">Flies</a>
 
 <form method="GET" action="{% url 'home' %}">
+    
     <input type="text" name="q" placeholder="Search Rooms" />
 
 </form>
+
+{% if request.user.is_authenticated %}
+    <p>{{request.user}}</p>
+    <a href="{% url 'logout' %}">logout</a>
+{% else %}
+    <a href="{% url 'login' %}">login</a>
+{% endif %}
 
 <hr>
