--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -5,43 +5,24 @@
 <style>
     .home-container{
         display: grid;
-        grid-template-columns: 1fr 3fr;
+        grid-template-columns: 1fr 3fr 1fr;
     }
 </style>
 
     <div class="home-container">
         <div>
-            <h3>Browse Topic</h3>
-            <hr>
-            <div>
-                <a href="{% url 'home' %}" >All</a>
-            </div>
-            {% for topic in topics %}
-                <div>
-                    <a href="{% url 'home' %}?q={{topic.name}}" >{{topic.name}}</a>
-                </div>
-            {% endfor %}
+            {% include 'core/topicsElement.html' %}
         </div>
 
         <div>
             <h5>Room Available ({{roomCount}})</h5>
             <a href="{% url 'create-room' %}">Create Room</a>
+            <hr>
+            {% include 'core/feedElement.html' %}
+        </div>
 
-            <div>
-                {% for i in rooms %}
-                    <div>
-                        {% if request.user == i.host %}
-                            <a href="{% url 'update-room' i.id %}" >Edit</a>
-                            <a href="{% url 'delete-room' i.id %}" >Delete</a>
-                        {% endif %}
-                        <span>@{{i.host.username}}</span>
-                        <h5>{{i.id}} -- <a href="{% url 'room' i.id %}">{{i.name}}</h5></a>
-                        <small>{{i.topic.name}}</small>
-                        <hr>
-                    </div>
-
-                {% endfor %}
-            </div>
+        <div>
+            {% include 'core/activity.html' %}
         </div>
     </div>
 {% endblock %}
