--- a/core/templates/core/profile.html
+++ b/core/templates/core/profile.html
@@ -1,29 +1,52 @@
 {% extends 'base.html' %}
 
+
 {% block content %}
+  <main class="profile-page layout layout--3">
+    <div class="container">
+      <!-- Topics Start -->
+      {% include 'core/topicsElement.html' %}
+      <!-- Topics End -->
 
-<style>
-    .profile-container{
-        display: grid;
-        grid-template-columns: 1fr 3fr 1fr;
-    }
-</style>
+      <!-- Room List Start -->
+      <div class="roomList">
+        <div class="profile">
+          <div class="profile__avatar">
+            <div class="avatar avatar--large active">
+              <img src="https://randomuser.me/api/portraits/men/11.jpg" />
+            </div>
+          </div>
+          
+          <div class="profile__info">
+            <h3>{{user.username}}</h3>
+            <p>@{{user.username}}</p>
+            {% if request.user == user %}
+            <a href="{% url 'edit-user' %}" class="btn btn--main btn--pill">Edit Profile</a>
+            {% endif %}
+          </div>
+          <div class="profile__about">
+            <h3>About</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur illo tenetur
+              facilis sunt nemo debitis quisquam hic atque aut? Ducimus alias placeat optio
+              accusamus repudiandae quis ab ex exercitationem rem?
+            </p>
+          </div>
+        </div>
 
-
-<h1>{{user.username}}</h1>
-
-<div class="profile-container" >
-    <div>
-        {% include 'core/topicsElement.html' %}
-    </div>
-
-    <div>
+        <div class="roomList__header">
+          <div>
+            <h2>Rooms Hosted by {{user.username}}</a>
+            </h2>
+          </div>
+        </div>
         {% include 'core/feedElement.html' %}
-    </div>
+      </div>
+      <!-- Room List End -->
 
-    <div>
-        {% include 'core/activity.html' %}
+      <!-- Activities Start -->
+      {% include 'core/activity.html' %}
+      <!-- Activities End -->
     </div>
-</div>
-
-{% endblock %}
+  </main>
+{% endblock content %}
